# bitchat-plugin

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose-spr.yml  docker-compose.test.yml  docker-compose.yml  plugin.json
bitchat-data/: api-token  state.json  trust.json
src/: error.rs  lib.rs  main.rs  state.rs
src/crypto/: encryption_service.rs  mod.rs  snow_noise_service.rs
src/mesh/: bluetooth_connection_manager.rs  bluetooth_mesh_delegate.rs  bluetooth_mesh_service.rs  fragment_manager.rs  mod.rs  packet_processor.rs  peer_manager.rs
src/model/: bitchat_message.rs  channel.rs  mod.rs  peer.rs  trust_manager.rs
src/protocol/: binary_protocol.rs  compression.rs  handshake_request.rs  message_type.rs  mod.rs  noise_identity_announcement.rs  packet.rs  padding.rs  protocol_nack.rs  special_recipients.rs
src/tui/: app.rs  event.rs  mod.rs  tui_logger.rs  ui.rs
src/tui/widgets/: help_bar.rs  input_box.rs  main_panel.rs  mod.rs  popup.rs  sidebar.rs
src/wifi/: mod.rs
tests/: mod.rs
tests/noise/: mod.rs
tests/protocol/: mod.rs  test_helpers.rs
